--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <div class="logo">
                 <a href="#">
-                    <img src="./img/logo.png" alt="Wooder">
+                    <img src="img/logo.png" alt="Wooder">
                     <!-- <h1 class="hidden">Wooder</h1> -->
                 </a>
             </div>
@@ -23,28 +23,73 @@
                 <li><a href="#gallery">GALLERY</a></li>
                 <li><a href="#news">NEWS</a></li>
             </ul>
-            <div class="right">
+            <div class="lang">
                 <div class="lang__current">
                     <span>EN</span>
-                    <i><img src="./img/icon/arrow-sub.png" alt=""></i>
+                    <i><img src="img/icon/arrow-sub.png" alt=""></i>
                 </div>
                 <!-- <div class="lang__option">
-
+                    <a href="#">VN</a>
+                    <a href="#">JP</a>
+                    <a href="#">AU</a>
                 </div> -->
             </div>
         </div>
     </header>
-    <main>
-        <section class="container">
-            <!-- <div class="container__background">
-                <img src="./img/slide/slide1.jpg" alt="slider1">
-                <img src="./img/slide/slide2.jpg" alt="slider2">
-                <img src="./img/slide/slide3.jpg" alt="slider3">
-            </div> -->
-            <div class="container__center">
-                <h1 class="container__center --wooder">WOODER</h1>
-                <a href="#">LEARN MORE<img src="./img/icon/arrow-more.png" alt="more"></a>
-            
+    <main class="mainwrapper homepage">
+        <section class="slider">
+            <div class="slider__images">
+                <div class="slider__images-item">
+                    <div class="text">
+                        <h2>WOODER</h2>
+                        <a href="#" class="btn">
+                            LEARN MORE
+                            <i><img src="img/icon/arrow-next.png" alt=""></i>
+                        </a>
+                    </div>
+                    <img src="img/slide/slide1.jpg" alt="">
+                </div>
+                <!-- <div class="slider__images-item">
+                    <div class="text">
+                        <h2>WOODER 2</h2>
+                        <a href="#" class="btn">
+                            LEARN MORE
+                            <i><img src="img/icon/arrow-more.png" alt=""></i>
+                        </a>
+                    </div>
+                    <img src="img/slide/slide2.jpg" alt=""> 
+                </div>
+                <div class="slider__images-item">
+                    <div class="text">
+                        <h2>WOODER 3</h2>
+                        <a href="#" class="btn">
+                            LEARN MORE
+                            <i><img src="img/icon/arrow-more.png" alt=""></i>
+                        </a>
+                    </div>
+                    <img src="img/slide/slide3.jpg" alt="">
+                </div> -->
+            </div>
+            <div class="slider__bottom">
+                <div class="container-fluid">
+                    <div class="paging">
+                        <span>01</span>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="mouse">
+                        <img src="img/icon/mouse.png" alt="" class="mouse__img">
+                        <img src="img/icon/arrow-down.png" alt="" class="mouse__arrow-down">
+                    </div>
+                    <div class="control">
+                        <div class="control__btn --prev"><img src="img/icon/arrow-prev.png" alt=""></div>
+                        <div class="control__btn --next"><img src="img/icon/arrow-next.png" alt=""></div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="product">
@@ -70,7 +115,11 @@
         </section>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="copy">© 2016 WOODER, Demo by CFD</div>
+            <div class="logoft"><a href="#"><img src="img/logo.png" alt=""></a></div>
+            <div class="backtotop">Back To Top</div>
+        </div>
     </footer>
 </body>
 </html>
