--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#gallery">GALLERY</a></li>
                 <li><a href="#news">NEWS</a></li>
             </ul>
-        
+            <div class="right">
                 <div class="lang">
                     <div class="lang__current">
                         <span>EN</span>
@@ -35,8 +35,19 @@
                         <a href="#">AU</a>
                     </div> -->
                 </div>
+                <div class="btnmenu"><span></span></div>
+            </div> 
         </div>
     </header>
+    <!-- <nav class="nav">
+        <ul>
+            <li><a href="#slider">HOME</a></li>
+            <li><a href="#product">PRODUCT</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#gallery">GALLERY</a></li>
+            <li><a href="#news">NEWS</a></li>
+        </ul>
+    </nav> -->
     <main class="mainwrapper homepage">
         <section class="slider">
             <div class="slider__images">
@@ -121,18 +132,24 @@
                     
                     <div class="product__video-list">
                         <div class="item">
-                            <img src="img/video/video1.jpg" alt="">
-                            <img src="img/video/button-play.jpg" alt="">
+                            <div class="video-around">
+                                <img src="img/video/video1.jpg" alt="">
+                                <img src="img/video/button-play.jpg" alt="">
+                            </div>
                             <span>Innovative Design</span>
                         </div>
                         <div class="item">
-                            <img src="img/video/video2.jpg" alt="">
-                            <img src="img/video/button-play.jpg" alt="">
+                            <div class="video-around">
+                                <img src="img/video/video2.jpg" alt="">
+                                <img src="img/video/button-play.jpg" alt="">
+                            </div>
                             <span>High-level Skills</span>
                         </div>
                         <div class="item">
-                            <img src="img/video/video3.jpg" alt="">
-                            <img src="img/video/button-play.jpg" alt="">
+                            <div class="video-around">
+                                <img src="img/video/video3.jpg" alt="">
+                                <img src="img/video/button-play.jpg" alt="">
+                            </div>
                             <span>Quality Products</span>
                         </div>
                     </div>
@@ -166,21 +183,23 @@
                     <span>We are a team of professionals in the wood processing and 
                         the creation of wooden furniture of the highest class</span>
                 </div>
-                <div class="gallery__img">
-                    <img src="img/gallery/lagre1.jpg" alt="">
-                </div>
-                <div class="gallery__img">
-                    <img src="img/gallery/lagre2.jpg" alt="">
-                </div>
-                <div class="gallery__img">
-                    <img src="img/gallery/lagre3.jpg" alt="">
-                </div>
-                <div class="gallery__img">
-                    <img src="img/gallery/lagre4.jpg" alt="">
-                </div>
-                <div class="gallery__img">
-                    <img src="img/gallery/lagre5.jpg" alt="">
-                </div>
+                <div class="gallery__list">
+                    <div class="gallery__list-img">
+                        <img src="img/gallery/lagre1.jpg" alt="">
+                    </div>
+                    <div class="gallery__list-img">
+                        <img src="img/gallery/lagre2.jpg" alt="">
+                    </div>
+                    <div class="gallery__list-img">
+                        <img src="img/gallery/lagre3.jpg" alt="">
+                    </div>
+                    <div class="gallery__list-img">
+                        <img src="img/gallery/lagre4.jpg" alt="">
+                    </div>
+                    <div class="gallery__list-img">
+                        <img src="img/gallery/lagre5.jpg" alt="">
+                    </div>
+                </div> 
             </div>
         </section>
         <section class="news">
