--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wooder</title>
-    <link rel="stylesheet" href="css/wooder.css">
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
     <header>
@@ -132,21 +132,21 @@
                     
                     <div class="product__video-list">
                         <div class="item">
-                            <div class="video-around">
+                            <div class="video-circle">
                                 <img src="img/video/video1.jpg" alt="">
                                 <img src="img/video/button-play.jpg" alt="">
                             </div>
                             <span>Innovative Design</span>
                         </div>
                         <div class="item">
-                            <div class="video-around">
+                            <div class="video-circle">
                                 <img src="img/video/video2.jpg" alt="">
                                 <img src="img/video/button-play.jpg" alt="">
                             </div>
                             <span>High-level Skills</span>
                         </div>
                         <div class="item">
-                            <div class="video-around">
+                            <div class="video-circle">
                                 <img src="img/video/video3.jpg" alt="">
                                 <img src="img/video/button-play.jpg" alt="">
                             </div>
@@ -209,21 +209,21 @@
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
                 </div>
                 <div class="news__textbox">
-                    <div class="image"><img src="img/news/news1.jpg" alt=""></div>
+                    <div class="image"><a href="#"><img src="img/news/news1.jpg" alt=""></a></div>
                     <div class="text">
                         <a href="#"><h3>Where does it come from?</h3></a>
                         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
                     </div>
                 </div>
                 <div class="news__textbox">
-                    <div class="image"><img src="img/news/news2.jpg" alt=""></div>
+                    <div class="image"><a href="#"><img src="img/news/news2.jpg" alt=""></a></div>
                     <div class="text">
                         <a href="#"><h3>Where does it come from?</h3></a>
                         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
                     </div>
                 </div>
                 <div class="news__textbox">
-                    <div class="image"><img src="img/news/news3.jpg" alt=""></div>
+                    <div class="image"><a href="#"><img src="img/news/news3.jpg" alt=""></a></div>
                     <div class="text">
                         <a href="#"><h3>Where does it come from?</h3></a>
                         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
