edit new file scss

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <i><img src="img/icon/arrow-next.png" alt=""></i>
                         </a>
                     </div>
-                    <img src="img/slide/slide1.jpg" alt="">
+                    <img src="img/slide/slide1.jpg" alt="" class="banner">
                 </div>
                 <!-- <div class="slider__images-item">
                     <div class="text">
@@ -69,7 +69,7 @@
                             <i><img src="img/icon/arrow-more.png" alt=""></i>
                         </a>
                     </div>
-                    <img src="img/slide/slide2.jpg" alt=""> 
+                    <img src="img/slide/slide2.jpg" alt="" class="banner"> 
                 </div>
                 <div class="slider__images-item">
                     <div class="text">
@@ -79,7 +79,7 @@
                             <i><img src="img/icon/arrow-more.png" alt=""></i>
                         </a>
                     </div>
-                    <img src="img/slide/slide3.jpg" alt="">
+                    <img src="img/slide/slide3.jpg" alt="" class="banner">
                 </div> -->
             </div>
             <div class="slider__bottom">
