folder new scss and edit new

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wooder</title>
     <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="scss/fonts.css">
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
             <div class="logo">
                 <a href="#">
                     <img src="img/logo.png" alt="Wooder">
-                    <!-- <h1 class="hidden">Wooder</h1> -->
+                    <h1 class="hidden">Wooder</h1>
                 </a>
             </div>
             <ul class="menu">
@@ -29,11 +30,11 @@
                         <span>EN</span>
                         <i><img src="img/icon/arrow-sub.png" alt=""></i>
                     </div>
-                    <!-- <div class="lang__option">
+                    <div class="lang__option">
                         <a href="#">VN</a>
                         <a href="#">JP</a>
                         <a href="#">AU</a>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="btnmenu"><span></span></div>
             </div> 
