--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li><a href="#news">NEWS</a></li>
         </ul>
     </nav> -->
-    <main class="mainwrapper homepage">
+    <main class="homepage">
         <section class="slider">
             <div class="slider__images">
                 <div class="slider__images-item">
