finish pages slider

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <ul class="menu">
-                <li><a href="#slider">HOME</a></li>
+                <li><a href="#slider" class="active">HOME</a></li>
                 <li><a href="#product">PRODUCT</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#gallery">GALLERY</a></li>
@@ -56,7 +56,7 @@
                     <div class="text">
                         <h2>WOODER</h2>
                         <a href="#" class="btn">
-                            LEARN MORE
+                            <span>LEARN MORE</span> 
                             <i><img src="img/icon/arrow-next.png" alt=""></i>
                         </a>
                     </div>
@@ -88,7 +88,7 @@
                     <div class="paging">
                         <span>01</span>
                         <ul>
-                            <li></li>
+                            <li class="active"></li>
                             <li></li>
                             <li></li>
                             <li></li>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="mouse">
                         <img src="img/icon/mouse.png" alt="" class="mouse__img">
-                        <img src="img/icon/arrow-down.png" alt="" class="mouse__arrow-down">
+                        <img src="img/icon/arrow-down.png" alt="" class="mouse__down">
                     </div>
                     <div class="control">
                         <div class="control__btn --prev"><img src="img/icon/arrow-prev.png" alt=""></div>
@@ -246,5 +246,8 @@
             <div class="backtotop">Back To Top</div>
         </div>
     </footer>
+
+    <script src="dest/jsmain.min.js"></script>
+    <script src="dest/main.js"></script>
 </body>
 </html>
