--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="#">AU</a>
                     </div>
                 </div>
-                <div class="btnmenu"><span></span></div>
+                <div class="btnmenu"><a href="#"><span></span></a></div>
             </div> 
         </div>
     </header>
@@ -50,6 +50,7 @@
         </ul>
     </nav> -->
     <main class="homepage">
+        <!-- Component Silder -->
         <section class="slider">
             <div class="slider__images">
                 <div class="slider__images-item">
@@ -105,21 +106,22 @@
                 </div>
             </div>
         </section>
-        <section class="product">
+        <!-- Component Product -->
+        <section class="product pd">
             <div class="container">
-                <div class="product__content">
-                    <div class="product__content  --furniture">
+                <div class="product__list">
+                    <div class="product__list-content --furniture">
                         <div class="textbox">
                             <h2>FURNITURE</h2>
-                            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, architecto? Nesciunt ratione quisquam sit cum laudantium porro labore voluptas, quibusdam impedit tempora tenetur modi repellat vero obcaecati veritatis maiores reiciendis.</span>
+                            <span>Wooder utilizes materials otherwise left behind, rendered useless in their original intent. By creating new pieces made</span>
                             <a href="#">learn more <img src="img/icon/arrow-more.png" alt=""></a>
                         </div>
                         <div class="image"><img src="img/picture/pic1.jpg" alt=""></div>
                     </div>
-                    <div class="product__content  --decor">
+                    <div class="product__list-content --decor">
                         <div class="textbox">
                             <h2>DECOR</h2>
-                            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, architecto? Nesciunt ratione quisquam sit cum laudantium porro labore voluptas, quibusdam impedit tempora tenetur modi repellat vero obcaecati veritatis maiores reiciendis.</span>
+                            <span>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable your premises. </span>
                             <a href="#">learn more <img src="img/icon/arrow-more.png" alt=""></a>
                         </div>
                         <div class="image"><img src="img/picture/pic2.jpg" alt=""></div>
@@ -157,6 +159,7 @@
                 </div>
             </div>
         </section>
+        <!-- Component Background -->
         <section class="background">
             <div class="text">
                 <h2>we Do the design of any complexity</h2>
@@ -165,8 +168,10 @@
             <div class="background__btn">
                 <a href="#"><img src="" alt="">WATCH VIDEO</a>
             </div>
+            <div class="background__image"><img src="img/background.jpg" alt=""></div>
         </section>
-        <section class="about">
+        <!-- Component About -->
+        <section class="about pd">
             <div class="container">
                 <div class="textbox">
                     <h2>About us</h2>
@@ -177,7 +182,8 @@
             </div>
             </div>
         </section>
-        <section class="gallery">
+        <!-- Component Gallery -->
+        <section class="gallery pd">
             <div class="container">
                 <div class="text">
                     <h2>GALLERY</h2>
@@ -203,6 +209,7 @@
                 </div> 
             </div>
         </section>
+        <!-- Component News -->
         <section class="news">
             <div class="container">
                 <div class="text">
@@ -232,6 +239,7 @@
                 </div>
             </div>
         </section>
+        <!-- Component Image move -->
         <section class="photo">
             <img src="img/img1.jpg" alt="">
             <img src="img/img2.jpg" alt="">
