finish a piece of product

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="slider__images-item">
                     <div class="text">
                         <h2>WOODER</h2>
-                        <a href="#" class="btn">
+                        <a href="#" class="btnmain">
                             <span>LEARN MORE</span> 
                             <i><img src="img/icon/arrow-next.png" alt=""></i>
                         </a>
@@ -113,16 +113,16 @@
                     <div class="product__list-content --furniture">
                         <div class="textbox">
                             <h2>FURNITURE</h2>
-                            <span>Wooder utilizes materials otherwise left behind, rendered useless in their original intent. By creating new pieces made</span>
-                            <a href="#">learn more <img src="img/icon/arrow-more.png" alt=""></a>
+                            <p>Wooder utilizes materials otherwise left behind, rendered useless in their original intent. By creating new pieces made</p>
+                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt="" ></a>
                         </div>
                         <div class="image"><img src="img/picture/pic1.jpg" alt=""></div>
                     </div>
                     <div class="product__list-content --decor">
-                        <div class="textbox">
+                        <div class="textbox --textright">
                             <h2>DECOR</h2>
-                            <span>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable your premises. </span>
-                            <a href="#">learn more <img src="img/icon/arrow-more.png" alt=""></a>
+                            <p>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable your premises.</p>
+                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt=""></a>
                         </div>
                         <div class="image"><img src="img/picture/pic2.jpg" alt=""></div>
                     </div>
@@ -163,7 +163,7 @@
         <section class="background">
             <div class="text">
                 <h2>we Do the design of any complexity</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
             </div>
             <div class="background__btn">
                 <a href="#"><img src="" alt="">WATCH VIDEO</a>
@@ -173,10 +173,10 @@
         <!-- Component About -->
         <section class="about pd">
             <div class="container">
-                <div class="textbox">
+                <div class="textbox --bottom">
                     <h2>About us</h2>
                     <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, architecto? Nesciunt ratione quisquam sit cum laudantium porro labore voluptas, quibusdam impedit tempora tenetur modi repellat vero obcaecati veritatis maiores reiciendis.</span>
-                    <a href="#">learn more <img src="img/icon/arrow-more.png" alt=""></a>
+                    <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt=""></a>
                 </div>
                 <div class="image"><img src="img/about-us.jpg" alt=""></div>
             </div>
