--- a/index.html
+++ b/index.html
@@ -128,11 +128,10 @@
                     </div>
                 </div>
                 <div class="product__video">
-                    <div class="text">
+                    <div class="textbox --text">
                         <h2>WOODER - IS QUALITY</h2>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
+                        <p>We create unique design objects made of rare wood, specially under the order. Look at the short video about our work.</p>
                     </div>
-                    
                     <div class="product__video-list">
                         <div class="item">
                             <div class="video-circle">
