New section background

--- a/index.html
+++ b/index.html
@@ -134,25 +134,25 @@
                     </div>
                     <div class="product__video-list">
                         <div class="item">
-                            <div class="video-circle">
+                            <div class="item-circle">
                                 <img src="img/video/video1.jpg" alt="">
-                                <img src="img/video/button-play.jpg" alt="">
+                                <div class="play-btn"><img src="img/video/button-play.jpg" alt=""></div>
                             </div>
-                            <span>Innovative Design</span>
+                            <p>Innovative Design</p>
                         </div>
                         <div class="item">
-                            <div class="video-circle">
+                            <div class="item-circle">
                                 <img src="img/video/video2.jpg" alt="">
-                                <img src="img/video/button-play.jpg" alt="">
+                                <div class="play-btn"><img src="img/video/button-play.jpg" alt=""></div>
                             </div>
-                            <span>High-level Skills</span>
+                            <p>High-level Skills</p>
                         </div>
                         <div class="item">
-                            <div class="video-circle">
+                            <div class="item-circle">
                                 <img src="img/video/video3.jpg" alt="">
-                                <img src="img/video/button-play.jpg" alt="">
+                                <div class="play-btn"><img src="img/video/button-play.jpg" alt=""></div>
                             </div>
-                            <span>Quality Products</span>
+                            <p>Quality Products</p>
                         </div>
                     </div>
                 </div>
@@ -160,21 +160,22 @@
         </section>
         <!-- Component Background -->
         <section class="background">
-            <div class="text">
-                <h2>we Do the design of any complexity</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
+            <div class="container">
+                <div class="textbox">
+                    <h2 class="yellow">we Do the design of any complexity</h2>
+                    <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
+                    <div class="btn-video btnmain">
+                        <img src="" alt="">WATCH VIDEO
+                    </div>
+                </div>
             </div>
-            <div class="background__btn">
-                <a href="#"><img src="" alt="">WATCH VIDEO</a>
-            </div>
-            <div class="background__image"><img src="img/background.jpg" alt=""></div>
         </section>
         <!-- Component About -->
         <section class="about pd">
             <div class="container">
                 <div class="textbox --bottom">
                     <h2>About us</h2>
-                    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, architecto? Nesciunt ratione quisquam sit cum laudantium porro labore voluptas, quibusdam impedit tempora tenetur modi repellat vero obcaecati veritatis maiores reiciendis.</span>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, architecto? Nesciunt ratione quisquam sit cum laudantium porro labore voluptas, quibusdam impedit tempora tenetur modi repellat vero obcaecati veritatis maiores reiciendis.</p>
                     <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt=""></a>
                 </div>
                 <div class="image"><img src="img/about-us.jpg" alt=""></div>
