Apply new file of section About

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="textbox">
                             <h2>FURNITURE</h2>
                             <p>Wooder utilizes materials otherwise left behind, rendered useless in their original intent. By creating new pieces made</p>
-                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt="" ></a>
+                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt="" ></a>
                         </div>
                         <div class="image"><img src="img/picture/pic1.jpg" alt=""></div>
                     </div>
@@ -122,7 +122,7 @@
                         <div class="textbox --textright">
                             <h2>DECOR</h2>
                             <p>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable your premises.</p>
-                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt=""></a>
+                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt="" ></a>
                         </div>
                         <div class="image"><img src="img/picture/pic2.jpg" alt=""></div>
                     </div>
@@ -163,9 +163,10 @@
             <div class="container">
                 <div class="textbox">
                     <h2 class="yellow">we Do the design of any complexity</h2>
-                    <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
+                    <p class="white">This is a team of professionals that make the furniture and wood décor high standard. Creating modern designs. Adhering to the global quality standards. And we are doing work with love.</p>
                     <div class="btn-video btnmain">
-                        <img src="" alt="">WATCH VIDEO
+                            <i><img src="img/play-button.svg" alt=""></i>
+                            <span>watch video</span> 
                     </div>
                 </div>
             </div>
@@ -173,12 +174,12 @@
         <!-- Component About -->
         <section class="about pd">
             <div class="container">
-                <div class="textbox --bottom">
+                <div class="textbox --about">
                     <h2>About us</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, architecto? Nesciunt ratione quisquam sit cum laudantium porro labore voluptas, quibusdam impedit tempora tenetur modi repellat vero obcaecati veritatis maiores reiciendis.</p>
-                    <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.png" alt=""></a>
+                    <p>We are a team of professionals in the wood processing and the creation of wooden furniture of the highest class</p>
+                    <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt=""></a>
                 </div>
-                <div class="image"><img src="img/about-us.jpg" alt=""></div>
+                <div class="image"><i><img src="img/about-us.jpg" alt=""></i></div>
             </div>
             </div>
         </section>
