doing setion Gallery

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="textbox --textright">
                             <h2>DECOR</h2>
                             <p>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable your premises.</p>
-                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt="" ></a>
+                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt="" ></a> 
                         </div>
                         <div class="image"><img src="img/picture/pic2.jpg" alt=""></div>
                     </div>
@@ -186,23 +186,22 @@
         <!-- Component Gallery -->
         <section class="gallery pd">
             <div class="container">
-                <div class="text">
+                <div class="textbox --gallery">
                     <h2>GALLERY</h2>
-                    <span>We are a team of professionals in the wood processing and 
-                        the creation of wooden furniture of the highest class</span>
+                    <p>We are a team of professionals in the wood processing and the creation of wooden furniture of the highest class</p>
                 </div>
                 <div class="gallery__list">
                     <div class="gallery__list-img">
                         <img src="img/gallery/lagre1.jpg" alt="">
                     </div>
                     <div class="gallery__list-img">
-                        <img src="img/gallery/lagre2.jpg" alt="">
-                    </div>
-                    <div class="gallery__list-img">
                         <img src="img/gallery/lagre3.jpg" alt="">
                     </div>
                     <div class="gallery__list-img">
                         <img src="img/gallery/lagre4.jpg" alt="">
+                    </div>
+                    <div class="gallery__list-img">
+                        <img src="img/gallery/lagre2.jpg" alt="">
                     </div>
                     <div class="gallery__list-img">
                         <img src="img/gallery/lagre5.jpg" alt="">
