finish page Wooder

--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@
         <!-- Component About -->
         <section class="about pd">
             <div class="container">
-                <div class="textbox --about">
-                    <h2>About us</h2>
-                    <p>We are a team of professionals in the wood processing and the creation of wooden furniture of the highest class</p>
-                    <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt=""></a>
+                <div class="about_row">
+                    <div class="textbox --about">
+                        <h2>About us</h2>
+                        <p>We are a team of professionals in the wood processing and the creation of wooden furniture of the highest class</p>
+                        <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt=""></a>
+                    </div>
+                    <div class="image"><i><img src="img/about-us.jpg" alt=""></i></div>
                 </div>
-                <div class="image"><i><img src="img/about-us.jpg" alt=""></i></div>
-            </div>
             </div>
         </section>
         <!-- Component Gallery -->
@@ -210,37 +211,39 @@
             </div>
         </section>
         <!-- Component News -->
-        <section class="news">
+        <section class="news pd">
             <div class="container">
-                <div class="text">
-                    <h2>WOODER - IS QUALITY</h2>
-                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
+                <div class="textbox --news">
+                    <h2>news</h2>
+                    <p>Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
                 </div>
-                <div class="news__textbox">
-                    <div class="image"><a href="#"><img src="img/news/news1.jpg" alt=""></a></div>
-                    <div class="text">
-                        <a href="#"><h3>Where does it come from?</h3></a>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
+                <div class="news__list">
+                    <div class="news__list-textbox">
+                        <div class="image"><a href="#"><img src="img/news/news1.jpg" alt=""></a></div>
+                        <div class="text">
+                            <h3 class="title"><a href="#" title="Where does it come from?">Where does it come from?</a></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="news__textbox">
-                    <div class="image"><a href="#"><img src="img/news/news2.jpg" alt=""></a></div>
-                    <div class="text">
-                        <a href="#"><h3>Where does it come from?</h3></a>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
+                    <div class="news__list-textbox">
+                        <div class="image"><a href="#"><img src="img/news/news2.jpg" alt=""></a></div>
+                        <div class="text">
+                            <h3 class="title"><a href="#" title="Where does it come from?">Where does it come from?</a></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="news__textbox">
-                    <div class="image"><a href="#"><img src="img/news/news3.jpg" alt=""></a></div>
-                    <div class="text">
-                        <a href="#"><h3>Where does it come from?</h3></a>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</span>
+                    <div class="news__list-textbox">
+                        <div class="image"><a href="#"><img src="img/news/news3.jpg" alt=""></a></div>
+                        <div class="text">
+                            <h3 class="title"><a href="#" title="Where does it come from?">Where does it come from?</a></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Component Image move -->
-        <section class="photo">
+        <section class="photos pd">
             <img src="img/img1.jpg" alt="">
             <img src="img/img2.jpg" alt="">
             <img src="img/img3.jpg" alt="">
@@ -251,7 +254,7 @@
         <div class="container">
             <div class="copy">© 2016 WOODER, Demo by CFD</div>
             <div class="logoft"><a href="#"><img src="img/logo.png" alt=""></a></div>
-            <div class="backtotop">Back To Top</div>
+            <div class="backtotop"><a href="#">Back To Top</a></div>
         </div>
     </footer>
 
