completed all pages Wooder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div> 
         </div>
     </header>
-    <!-- <nav class="nav">
+    <nav class="nav">
         <ul>
             <li><a href="#slider">HOME</a></li>
             <li><a href="#product">PRODUCT</a></li>
@@ -48,7 +48,7 @@
             <li><a href="#gallery">GALLERY</a></li>
             <li><a href="#news">NEWS</a></li>
         </ul>
-    </nav> -->
+    </nav>
     <main class="homepage">
         <!-- Component Silder -->
         <section class="slider">
